<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Pill Watch</string>
    <string name="text_test">Text Test</string>
    <string name="meds_on_time">Luarea medicamentelor la timp nu a fost niciodată mai ușoară</string>
    <string name="warning_text_welcome">Aceasta aplicație nu este menită să înlocuiască sugestiile medicilor specialiști.</string>
    <string name="already_have_an_account">Ai deja cont?</string>
    <string name="log_in">Conectează-te</string>
    <string name="get_started_button_txt">Înregistrează-te</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Parolă</string>
    <string name="action_sign_in">Conectare sau înregistrare</string>
    <string name="action_sign_in_short">Conectare</string>
    <string name="welcome">Bun venit!</string>
    <string name="invalid_username">Numele este invalid</string>
    <string name="invalid_password">Parola trebuie să conțină cel putin 5 caractere</string>
    <string name="login_failed">Conectarea a eșuat</string>
    <string name="signup_btn">Înregistrează-te</string>
    <string name="confirm_password"><font size="18">Confirmați parola</font></string>
    <string name="password"><font size="18">Parolă</font></string>
    <string name="email"><font size="18">Email</font></string>
    <string name="sign_up">Înregistrează-te</string>
    <string name="dont_have_an_account">Nu ai cont?</string>
    <string name="log_in_btn">Conectare</string>
    <string name="or">sau</string>
    <string name="log_in_with_google">Conectare cu Google</string>
    <string name="sign_up_with_google">Înregistrare cu Google</string>
    <string name="choose_an_username">Alege un nume:</string>
    <string name="username">Nume</string>
    <string name="next">Înainte</string>
    <string name="settings">Setări</string>
    <string name="medication">Medicație</string>
    <string name="home">Acasă</string>
    <string name="nav_open">Deschide</string>
    <string name="nav_close">Închide</string>
    <string name="profile">Profil</string>
    <string name="check_for_updates">Verifică actualizări noi</string>
    <string name="an_app_for_your_needs">O aplicație pentru nevoile dumneavoastră</string>
    <string name="add_a_med">Adăugați un medicament</string>
    <string name="medName">MedName</string>
    <string name="add_the_medicine_name">Adăugați numele medicamentului:</string>
    <string name="medicine_name">Numele medicamentului</string>
    <string name="concentration">Concentrație</string>
    <string name="starting_hour">Oră de început:</string>
    <string name="share">Distribuie</string>
    <string name="choose_reminder_frequency">Alege frecvența alarmelor:</string>
    <string name="medication_name">Numele medicamentului:</string>
    <string name="medication_logs">Istoricul administrării medicamentului:</string>
    <string name="add_alarms">Adaugați alarme</string>
    <string name="username_">Nume:</string>
    <string name="email_">Email:</string>
    <string name="active_med_count">Număr medicamente active:</string>
    <string name="credits">© Pill Watch 2023</string>
    <string name="healthcare">Pentru a vă asigura o gestionare sigură și adecvată, discutați cu medicul dumneavoastră în cazul în care credeți că întâmpinați sau puteți întâmpina o interacțiune medicamentoasă.</string>
    <string name="interaction">Atenție: Dacă nu sunt găsite interacțiuni între două medicamente, nu înseamnă neapărat că nu există interacțiuni. Consultați întotdeauna un medic specialist.</string>
    <string name="medical_advice">Această aplicație nu oferă sfaturi medicale. Vă rugăm să consultați un medic calificat pentru îndrumare medicală personalizată.</string>
    <string name="cannot_check_interaction">Nu s-a putut verifica interacțiunea acestui medicament cu medicamentele existente contul dvs.</string>
    <string name="theme">Temă</string>
    <string name="sign_out">Deconectare</string>
    <string name="log_out">Deconectare</string>
    <string name="no_meds_home">Nu mai trebuie administrat niciun medicament astăzi.\n O zi frumoasă în continuare!</string>
    <string name="no_meds_medication">Nu s-a găsit istoricul medicamentelor.\n O zi frumoasă în continuare!</string>
    <string name="please_wait">Vă rugăm așteptați.</string>
    <string name="no_logs_available_for_this_medication">Nu există istoric disponibil pentru acest medicament.</string>

    <string name="invalid_email_err">Email invalid.</string>
    <string name="short_pwd_err">Parolă prea scurtă. Minim 8 caractere.</string>
    <string name="empty_fields_err">Vă rugăm să completați toate câmpurile.</string>
    <string name="incorrect_pwd">Parolă incorectă.</string>
    <string name="no_user">Nu s-a găsit utilizatorul cu această adresă de email</string>
    <string name="login_success">Conectare reușită.</string>
    <string name="login_fail">Conectare eșuată.</string>

    <string name="email_taken_err">Adresa de email este deja utilizată.</string>
    <string name="matching_pwd_err">Parolele trebuie să fie identice.</string>
    <string name="signup_success">Înregistrare reușită.</string>
    <string name="signup_fail">Înregistrare eșuată.</string>

    <string name="short_username">Numele este prea scurt. Minim 4 caractere.</string>

    <string name="no_username">Numele nu a fost găsit </string>
    <string name="no_email_found">Email-ul nu a fost găsit</string>
    <string name="count_zero">0 </string>


    <string name="apply_changes">Aplicați modificările</string>
    <string name="restart_message">Modificările vor fi aplicate după restartarea aplicației. Doriți să restartați aplicația acum?</string>

    <string  name="later">Mai târziu</string>
    <string name="cancel">Anulează</string>

    <string name="language">Limbă</string>

    <string name="title_language_dialog">Alege limba:</string>
    <string name="title_theme_dialog">Alege tema:</string>
    <string name="change_alarm_notifications">Editează notificarea alarmelor</string>
    <string name="filter">Filtrează</string>
    <string name="filter_default">Filtrează: Ne-arhivate</string>

    <string name="archived">Medicament arhivat</string>
    <string name="unarchived">Medicament dezarhivat</string>

    <string name="filter_option_archived">Arhivate</string>
    <string name="filter_option_nonarchived">Ne-arhivate</string>
    <string name="filter_option_all">Toate</string>

    <string name="regenerate_alarms">Regenerare alarme</string>

    <string name="med_not_found">Eroare: Medicamentul nu a fost găsit.</string>
    <string name="deleted_success"> sters cu success.</string>
    <string name="med_logs_empty">Eroare: Istoricul nu a fost găsit.</string>

    <string name="no_medication_archived">Nu s-au găsit medicamente arhivate.\n O zi frumoasă în continuare!</string>
    <string name="no_medication_non_archived">Nu s-au găsit medicamente ne-arhivate.\n O zi frumoasă în continuare!</string>
    <string name="no_medication">Nu s-au găsit medicamente. O zi frumoasă în continuare!</string>

    <string name="medicine_list">Lista medicamentelor mele: </string>
    <string name="share_using">Distribuie folosind </string>
    <string name="share_message">Bună, uite istoricul medicamentelor mele din aplicația PillWatch până astăzi</string>

    <string name="taken">Luat</string>
    <string name="postponed">Amânat</string>
    <string name="missed">Pierdut</string>

    <string name="every_x_hours">La fiecare X ore</string>
    <string name="once_a_day">O dată pe zi</string>
    <string name="twice_a_day">De două ori pe zi</string>
    <string name="three_times">De trei ori pe zi</string>
    <string name="four_times">De patru ori pe zi</string>
    <string name="no_reminders">Fară alarme</string>

    <string name="title_edit_notif_dialog">Editează notificarea alarmei</string>
    <string name="set_alarms">Setează alarmele:</string>
    <string name="every">La fiecare</string>
    <string name="hours">ore</string>

    <string name="yes">Da</string>
    <string name="no">Nu</string>

    <string name="interaction_alert_title">ALERTĂ! INTERACȚIUNE GĂSITĂ!</string>
    <string name="interaction_alert_msg">Următoarele interacțiuni au fost găsite între acest medicament și celelalte medicamente din lista dvs:</string>

    <string name="low_severity">severitate scăzută</string>
    <string name="moderate_severity">severitate moderată</string>
    <string name="high_severity">severitate ridicată</string>

    <string name="proceed_question">Doriți să continuați?</string>
    <string name="add_name_toast">Vă rugăm adăugați numele unui medicament.</string>

    <string name="check_interaction">Se verifică interacțiunile chimice</string>

    <string name="text_share_logs_part1" >Cele mai recente 10 administrări ale medicamentului </string>
    <string name="text_share_logs_part2" >sunt:</string>

    <string name="notification_title">Alarmă administrare medicament</string>
    <string name="notification_ok">OK</string>
    <string name="notification_postpone">AMÂNARE</string>
    <string name="notification_text">A sosit momentul pentru administrarea medicamentului: </string>

    <string name="success">Actualizare reușită.</string>
    <string name="failure">Actualizare eșuată.</string>
    <string name="no_update_req">Datele medicamentelor sunt deja actualizate.</string>
    <string name="error">Serverul nu este disponibil.</string>

    <string name="title_success">Succes</string>
    <string name="title_failure">Eșec</string>
    <string name="title_no_update_req">Nu este necesară actualizarea</string>
    <string name="title_error">Eroare</string>

    <string-array name="concentration_measures">
        <item>-</item>
        <item>mg</item>
        <item>ml</item>
        <item>g</item>
        <item>%</item>
        <item>UI</item>
        <item>MU</item>
        <item>micrograms</item>
        <item>mg/ml</item>
        <item>mg/g</item>
        <item>µg/ml</item>
        <item>MU/ml</item>
        <item>UI/ml</item>
    </string-array>

    <string-array name="theme_entries">
        <item>Luminoasă</item>
        <item>Întunecată</item>
        <item>Setare implicită</item>
    </string-array>

    <string-array name="theme_values">
        <item>light</item>
        <item>dark</item>
        <item>system</item>
    </string-array>

    <string-array name="language_entries">
        <item>English</item>
        <item>Română</item>
    </string-array>


    <string-array name="language_values">
        <item>en</item>
        <item>ro</item>
    </string-array>

</resources>