<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:ignore="HardcodedText">

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile"
        app:showAsAction="always" />

    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings"
        app:showAsAction="always" />

    <item
        android:id="@+id/nav_clean"
        android:icon="@drawable/ic_clean"
        android:title="Clean"
        app:showAsAction="always" />

    <item
        android:id="@+id/nav_update"
        android:icon="@drawable/ic_update"
        android:title="@string/check_for_updates"
        app:showAsAction="always" />

    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/ic_logout"
        android:title="@string/log_out"
        app:showAsAction="always" />

</menu>