<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.pillwatch.viewmodel.SignupViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activity.SignupActivity">

        <ImageView
            android:id="@+id/image_signup"
            android:layout_width="wrap_content"
            android:layout_height="310dp"
            android:layout_marginTop="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/bg_pill_bottle"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:id="@+id/layout_edit_text_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="40dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_signup">

            <EditText
                android:id="@+id/editTextEmailAddress_signup"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:ems="12"
                android:hint="@string/email"
                android:text="@{viewModel.email}"
                android:textColorHint="?attr/colorOnSecondaryContainer"
                android:inputType="textEmailAddress"
                tools:ignore="SpeakableTextPresentCheck" />

            <EditText
                android:id="@+id/editTextPassword_signup"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginTop="20dp"
                android:ems="12"
                android:hint="@string/password"
                android:text="@{viewModel.password}"
                android:inputType="textPassword"
                android:textColorHint="?attr/colorOnSecondaryContainer"
                tools:ignore="SpeakableTextPresentCheck" />


            <EditText
                android:id="@+id/editTextConfirmPassword_signup"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginTop="20dp"
                android:ems="12"
                android:hint="@string/confirm_password"
                android:text="@{viewModel.confirmPassword}"
                android:textColorHint="?attr/colorOnSecondaryContainer"
                android:inputType="textPassword"
                tools:ignore="SpeakableTextPresentCheck" />

        </LinearLayout>

        <Button
            android:id="@+id/button_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:textSize="@dimen/text_size_big"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_edit_text_signup"
            android:text="@string/signup_btn" />

        <LinearLayout
            android:id="@+id/layout_login_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_signup"
            >


            <TextView
                android:id="@+id/already_have_account_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_medium"
                android:layout_weight="1"
                android:text="@string/already_have_an_account" />

            <TextView
                android:id="@+id/log_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:text="@string/log_in"
                android:textColor="?attr/colorPrimary"
                android:textSize="@dimen/text_size_medium"
                android:textStyle="bold" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>