<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.pillwatch.viewmodel.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activity.LoginActivity">

        <ImageView
            android:id="@+id/image_login"
            android:layout_width="wrap_content"
            android:layout_height="310dp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/bg_pill_bottle"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:id="@+id/layout_edit_text_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="40dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_login">

            <EditText
                android:id="@+id/editTextEmailAddress_login"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:ems="12"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:text="@{viewModel.email}"
                android:textColorHint="?attr/colorOnSecondaryContainer"
                tools:ignore="SpeakableTextPresentCheck" />

            <EditText
                android:id="@+id/editTextPassword_login"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginTop="20dp"
                android:ems="12"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:text="@{viewModel.password}"
                android:textColorHint="?attr/colorOnSecondaryContainer"
                tools:ignore="SpeakableTextPresentCheck" />


        </LinearLayout>

            <Button
                android:id="@+id/button_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:text="@string/log_in_btn"
                android:textSize="@dimen/btn_text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout_edit_text_login"/>

            <TextView
                android:id="@+id/text_between_btns"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or"
                android:layout_marginTop="10dp"
                android:textSize="@dimen/text_size_medium"
                android:textAlignment="textStart"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/button_login"/>

        <Button
            android:id="@+id/btn_google_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="40dp"
            android:text="@string/log_in_with_google"
            android:textSize="@dimen/btn_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_between_btns" />

        <ImageView
            android:id="@+id/googlelogo"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/googlelogo"
            android:scaleType="fitCenter"
            android:layout_marginStart="40dp"
            app:tint="?attr/colorOnSurfaceInverse"
            app:layout_constraintTop_toTopOf="@id/btn_google_sign_in"
            app:layout_constraintStart_toStartOf="@+id/btn_google_sign_in"
            app:layout_constraintBottom_toBottomOf="@id/btn_google_sign_in"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:id="@+id/layout_login_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_google_sign_in">


            <TextView
                android:id="@+id/dont_have_account_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dont_have_an_account"
                android:textSize="@dimen/text_size_medium" />

            <TextView
                android:id="@+id/signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:text="@string/sign_up"
                android:textColor="?attr/colorPrimary"
                android:textSize="@dimen/text_size_medium"
                android:textStyle="bold" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>