<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="welcomeViewModel"
            type="com.example.pillwatch.fragments.welcome.WelcomeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.welcome.WelcomeFragment">

        <FrameLayout
            android:id="@+id/frame_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/image_welcome_id"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/bg_welcome"
                tools:ignore="ContentDescription,ImageContrastCheck" />

            <ImageView
                android:id="@+id/fade_gradient_purple_id"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:layout_gravity="bottom"
                android:scaleType="fitEnd"
                android:src="@drawable/fade_gradient_purple"
                tools:ignore="ContentDescription,ImageContrastCheck" />

            <ImageView
                android:id="@+id/fade_gradient_id"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:layout_gravity="bottom"
                android:scaleType="fitEnd"
                android:src="@drawable/fade_gradient"
                tools:ignore="ContentDescription,ImageContrastCheck" />

        </FrameLayout>

        <TextView
            android:id="@+id/text_intro_welcome_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="32dp"
            android:text="@string/meds_on_time"
            android:textAlignment="center"
            android:textSize="@dimen/text_size_big"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/frame_id" />

        <Button
            android:id="@+id/get_started_button_id"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="32dp"
            android:text="@string/get_started_button_txt"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_intro_welcome_id" />

        <LinearLayout
            android:id="@+id/layout_acc_login_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/get_started_button_id">

            <TextView
                android:id="@+id/have_an_account_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/already_have_an_account"
                android:textSize="@dimen/text_size_medium" />

            <TextView
                android:id="@+id/log_in_welcome_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/log_in"
                android:textColor="?attr/colorPrimary"
                android:textSize="@dimen/text_size_medium"
                android:textStyle="bold"
                tools:layout_editor_absoluteY="577dp" />

        </LinearLayout>

        <TextView
            android:id="@+id/warning_text_welcome_id"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:text="@string/warning_text_welcome"
            android:textAlignment="center"
            android:textSize="@dimen/text_size_small"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_acc_login_id"
            app:layout_constraintVertical_bias="0.8" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>