<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.pillwatch.ui.profile.ProfileViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorPrimary"
        tools:context=".ui.profile.ProfileFragment">


        <ImageView
            android:id="@+id/back_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:src="@drawable/ic_back_arrow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="?attr/colorOnPrimarySurface"
            tools:ignore="ContentDescription,RtlSymmetry" />

        <TextView
            android:id="@+id/choose_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginBottom="48dp"
            android:text="@string/profile"
            android:textColor="?attr/colorPrimaryContainer"
            android:textSize="@dimen/text_size_xl"
            app:layout_constraintBottom_toTopOf="@+id/background"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/background"
            android:layout_width="450dp"
            android:layout_height="match_parent"
            android:layout_marginTop="200dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/rounded_rectangle"
            tools:ignore="ContentDescription,VisualLintBounds" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="30dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/background">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/username_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/username_"
                    android:textColor="?attr/colorOnBackground"
                    android:textSize="@dimen/text_size_mid" />

                <TextView
                    android:id="@+id/username_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:textColor="?attr/colorOnBackground"
                    android:textSize="@dimen/text_size_medium"
                    tools:text="Test Username" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="2dp"
                    android:layout_marginEnd="2dp"
                    android:layout_weight="1" />

                <ImageView
                    android:id="@+id/edit_button_username"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_gravity="center_vertical"
                    android:clickable="true"
                    android:src="@drawable/ic_edit"
                    app:tint="?attr/colorPrimary"
                    tools:ignore="ContentDescription,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/email_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email_"
                    android:textColor="?attr/colorOnBackground"
                    android:textSize="@dimen/text_size_mid"/>

                <TextView
                    android:id="@+id/email_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:textColor="?attr/colorOnBackground"
                    android:textSize="@dimen/text_size_medium"
                    tools:text="test@gmail.com" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/count_meds_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/active_med_count"
                    android:textColor="?attr/colorOnBackground"
                    android:textSize="@dimen/text_size_mid"/>

                <TextView
                    android:id="@+id/count_meds_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:textColor="?attr/colorOnBackground"
                    android:textSize="@dimen/text_size_medium"
                    tools:text="15" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/credits"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:textColor="?attr/colorCredits"
            android:textSize="@dimen/text_size_medium"
            android:layout_marginBottom="25dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/credits" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>